# study-roads

./: .gitignore  README.md
clash-linux/: clash-linux.md
code/cppProjects/: main
code/cppProjects/99/: built.sh  main.cpp  makefile  manual.md
code/cppProjects/design/: main
code/cppProjects/matrix/: CMakeLists.txt
code/cppProjects/matrix/inc/: matrix.h  read_for_matrix.h  read_only.h  read_with_mark.h  string_tools.h
code/cppProjects/matrix/src/: main.cpp  matrix.cpp  read_for_matrix.cpp  read_only.cpp  read_with_mark.cpp  string_tools.cpp
code/cppProjects/matrix/tmp/: input.txt
codesys_project/: codesys.md  main.txt  reagent_add.txt
daily-record/: preface.txt  如何快速入睡.txt  如何高效工作.txt
data-structure/: list.c
gitRoad/: CopyVersion_gitTutuor.md  gitTutuor.md
html/: index.html  mine.css  pointer.cur  tutor.md
javacode/: administrator.java  hello.java  main.java  maven.md  person.java  tutor.md
javacode/MyBackend/: pom.xml
javacode/client/: pom.xml
javacode/jdbc/: tutor.md
javacode/opcua-client/: README.md  pom.xml
js/: index.html  myjs.js  tutor.md  vue_tutor.md
kepserver/: Copy_version_kep.md  caption.txt  tutor.md
learnign_record/: cpp.md  my_first_book.md  plc.md
lf/: config.sh  lf.md  lfcd  lfrc
linux/: config.sh  tool.md  tools.md  v2ray-linux.md  wsl.md
linux/vim-config/: .vimrc  vimtutor
markdown/: copyVersion_tutor.md  mdtutor.md  tutor.md
markdown/src/: hama.txt  main.cpp  main.java  test
mysql/: test.sql  tutor.md
pr/: tutor.md
sftp/: sftp.md
vim/: testfile  vimrc
vim-config/: .vimrc  vimrc  vimtutor
(+116 files in other folders)
